# VL.OpenEXR

./: .gitignore  README.md  VL.OpenEXR.vl
.github/workflows/: main.yml
deployment/: VL.OpenEXR.nuspec
help/: Example Load Texture as Skybox.vl  Example Load Vertex Animation Texture from Houdini.vl  Example Write an exr texture.vl
help/PaintSplat/geo/: vertex_animation_textures2_mesh.fbx
help/PaintSplat/tex/: vertex_animation_textures2_col.exr  vertex_animation_textures2_pos.exr  vertex_animation_textures2_pos.tif  vertex_animation_textures2_rot.exr
help/export/materials/: vertex_animation_textures1_data.json
help/export/meshes/: vertex_animation_textures1_mesh.fbx
help/export/textures/: vertex_animation_textures1_pos.exr
help/shaders/: ApplyVAT_ShaderFX.sdsl  ApplyVATv3_ShaderFX.sdsl
resources/: 0270_Ocean_Commission_Canyon_NLD_11.Depth.0001.exr
src/: VL.OpenEXR.cs  VL.OpenEXR.csproj  VL.OpenEXR.sln  build.sh
src/native/: Cargo.toml
src/native/.cargo/: config.toml
src/native/src/: lib.rs
