[package]
name = "vl_openexr_native"
version = "0.1.0"
edition = "2021"
authors = ["torinos <torinosyt@gmail.com>"]

[lib]
name = "vl_openexr_native"
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
exr = "1.72.0"
itertools = "0.13.0"
radiant = "0.3.0"

[profile.release]
lto = true
